@@ -1,17 +1,19 @@
 class TagList < Array
+
   cattr_accessor :delimiter
+
   self.delimiter = ','
-  
+
   def initialize(*args)
     add(*args)
   end
-  
+
   attr_accessor :owner
-  
+
   # Add tags to the tag_list. Duplicate or blank tags will be ignored.
   #
   #   tag_list.add("Fun", "Happy")
-  # 
+  #
   # Use the <tt>:parse</tt> option to add an unparsed tag string.
   #
   #   tag_list.add("Fun, Happy", :parse => true)
@@ -21,20 +23,20 @@ class TagList < Array
     clean!
     self
   end
-  
+
   # Remove specific tags from the tag_list.
-  # 
+  #
   #   tag_list.remove("Sad", "Lonely")
   #
   # Like #add, the <tt>:parse</tt> option can be used to remove multiple tags in a string.
-  # 
+  #
   #   tag_list.remove("Sad, Lonely", :parse => true)
   def remove(*names)
     extract_and_apply_options!(names)
     delete_if { |name| names.include?(name) }
     self
   end
-  
+
   # Transform the tag_list into a tag string suitable for edting in a form.
   # The tags are joined with <tt>TagList.delimiter</tt> and quoted if necessary.
   #
@@ -43,12 +45,12 @@ class TagList < Array
   def to_s
     tags = frozen? ? self.dup : self
     tags.send(:clean!)
-    
+
     tags.map do |name|
       name.include?(delimiter) ? "\"#{name}\"" : name
     end.join(delimiter.ends_with?(" ") ? delimiter : "#{delimiter} ")
   end
-  
+
  private
   # Remove whitespace, duplicates, and blanks.
   def clean!
@@ -56,21 +58,22 @@ class TagList < Array
     map!(&:strip)
     uniq!
   end
-    
+
   def extract_and_apply_options!(args)
     options = args.last.is_a?(Hash) ? args.pop : {}
     options.assert_valid_keys :parse
-    
+
     if options[:parse]
       args.map! { |a| self.class.from(a) }
     end
-    
+
     args.flatten!
   end
-  
+
   class << self
+
     # Returns a new TagList using the given tag string.
-    # 
+    #
     #   tag_list = TagList.from("One , Two,  Three")
     #   tag_list # ["One", "Two", "Three"]
     def from(string)
@@ -78,13 +81,15 @@ class TagList < Array
 
       returning new do |tag_list|
         string = string.to_s.dup
-        
+
         # Parse the quoted tags
         string.gsub!(/(\A|#{delimiter})\s*"(.*?)"\s*(#{delimiter}\s*|\z)/) { tag_list << $2; $3 }
         string.gsub!(/(\A|#{delimiter})\s*'(.*?)'\s*(#{delimiter}\s*|\z)/) { tag_list << $2; $3 }
-        
+
         tag_list.add(string.split(delimiter))
       end
     end
+
   end
+
 end
