@@ -1,3 +1,6 @@
+== 2010-02-17
+* Converted the plugin to be compatible with Rails3
+
 == 2009-12-02
 
 * PostgreSQL is now supported (via morgoth)
@@ -12,10 +15,10 @@
 * Removed extraneous down migration cruft (azabaj)
 
 == 2008-06-09
- 
+
  * Added support for Single Table Inheritance
  * Adding gemspec and rails/init.rb for gemified plugin
- 
+
 == 2007-12-12
 
  * Added ability to use dynamic tag contexts
